--- a/html/sass/calculator.scss
+++ b/html/sass/calculator.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import "base/base";
-@import "layout/page";
+@import "layout/page-heading";
 
 .calculator {
   padding-bottom: 179px;
