--- a/html/sass/common/_global.scss
+++ b/html/sass/common/_global.scss
@@ -17,7 +17,7 @@ a {
 }
 
 .container {
-  max-width: calc(#{$container});
+  max-width: calc(#{$site-container});
   padding-left: $desktop-padding;
   padding-right: $desktop-padding;
   width: 100%;
