--- a/html/sass/contact.scss
+++ b/html/sass/contact.scss
@@ -1,5 +1,5 @@
 @charset "UTF-8";
 @import "base/base";
 @import "components/buttons-row";
-@import "layout/page";
+@import "layout/page-heading";
 @import "layout/contact";
