--- a/html/sass/review.scss
+++ b/html/sass/review.scss
@@ -3,7 +3,7 @@
 @import "components/review-item";
 @import "components/buttons-row";
 @import "components/video";
-@import "layout/page";
+@import "layout/page-heading";
 @import "layout/video-our-work";
 @import "layout/large-callback";
 @import "layout/about-us";
