--- a/html/sass/trucks.scss
+++ b/html/sass/trucks.scss
@@ -2,7 +2,7 @@
 @import "base/base";
 @import "components/video";
 @import "components/step";
-@import "layout/page";
+@import "layout/page-heading";
 @import "layout/trucks";
 @import "layout/goals";
 @import "layout/our-work";
