--- a/html/sass/our-work.scss
+++ b/html/sass/our-work.scss
@@ -2,4 +2,4 @@
 @import "base/base";
 @import "components/video";
 @import "layout/our-work";
-@import "layout/page";
+@import "layout/page-heading";
